--- a/JSFproject/WebContent/viewItem.xhtml
+++ b/JSFproject/WebContent/viewItem.xhtml
@@ -12,20 +12,18 @@
     </h:head>  
       
     <h:body>
-    	<h:outputLabel id="txt" value="#{itemBean.txt}"></h:outputLabel>
 		<h:form>
-			<div>
+			<p:panelGrid columns="2">
+			
 				<h:outputLabel value = "Наименование"></h:outputLabel>
 				<p:inputText value = "#{itemBean.item.name}"></p:inputText>
-			</div>
-			<div>
+			
 				<h:outputLabel value = "Количество"></h:outputLabel>
 				<p:inputNumber value = "#{itemBean.item.amount}"></p:inputNumber>
-			</div>
-			<div>
-				<p:commandButton value = "Сохранить" update="txt" action="viewItemList" actionListener="#{itemBean.saveItem}"></p:commandButton>
+			
+				<p:commandButton value = "Сохранить" action="viewItemList" actionListener="#{itemBean.saveItem}"></p:commandButton>
 				<p:commandButton value = "Отменить" action="viewItemList"/>
-			</div>
+			</p:panelGrid>
 		</h:form>
 	</h:body>
 </html>
